--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "outerZone",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+  },
   "scripts": {
     "test": "gulp test"
   },
