--- a/bower.json
+++ b/bower.json
@@ -9,15 +9,16 @@
     "angular-messages": "~1.5.3",
     "angular-aria": "~1.5.3",
     "angular-resource": "~1.5.3",
-    "angular-ui-router": "~0.2.15",
+    "angular-ui-router": "^0.3.0",
     "bootstrap-sass": "~3.3.5",
     "angular-bootstrap": "~1.3.3",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
+    "angular": "^1.6.0",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
+    "angular-counter": "angular-counter-animation#^0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
